placeholder img/ adaptive height/ placeholderr text

--- a/index.html
+++ b/index.html
@@ -10,10 +10,25 @@
     <div id='site-top'>
         <div id='column-hold'>
             <div id='column1'>
-                <h1>Tom Driscoll</h1>
+                <div id='Name'>Tom Driscoll</div>
+                <div id='slug-line'>a software engineer with an insatiable apetite for creation</div>
+                <ul id='skils-list'>
+                    <li>Ruby</li>
+                    <li>Javascript</li>
+                    <li>Ruby</li>
+                    <li>Javascript</li>
+                    <li>Ruby</li>
+                    <li>Javascript</li>
+                </ul>
             </div>
             <div id='column2'>
-                <div id='project1' class='project-slide'></div>
+                <div id='project1' class='project-slide'>
+                    <div class='project-wrapper'>
+                        <div id='Dr-Mario-Background'>
+
+                        </div>
+                    </div>
+                </div>
                 <div id='project2' class='project-slide'></div>
                 <div id='project3' class='project-slide'></div>
             </div>
