--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
     <div id='site-top'>
         <div id='column-hold'>
             <div id='column1'>
-                <div id='Name'>Tom Driscoll</div>
-                <div id='slug-line'>a software engineer with an insatiable apetite for creation</div>
-                <ul id='skils-list'>
-                    <li>Ruby</li>
-                    <li>Javascript</li>
-                    <li>Ruby</li>
-                    <li>Javascript</li>
-                    <li>Ruby</li>
-                    <li>Javascript</li>
-                </ul>
+                <div id='column1-content'>
+                    <div id='name'>Tom Driscoll</div>
+                    <div id='slug-line'>a software engineer with an insatiable apetite for creation</div>
+                    <ul id='skills-list'>
+                        <li>Skills</li>
+                        <li>Ruby</li>
+                        <li>Javascript</li>
+                        <li>Ruby</li>
+                        <li>Javascript</li>
+                        <li>Ruby</li>
+                        <li>Javascript</li>
+                    </ul>
+                </div>
             </div>
             <div id='column2'>
                 <div id='project1' class='project-slide'>
                     <div class='project-wrapper'>
-                        <div id='Dr-Mario-Background'>
+                        <div id='dr-mario-background'>
 
                         </div>
                     </div>
