--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href='./index.css'>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id='site-top'>
         <div id='column-hold'>
             <div id='column1'>
                 <div id='column1-content'>
-                    <div id='name'>Tom Driscoll</div>
-                    <div id='slug-line'>a software engineer with an insatiable apetite for creation</div>
+                    <div id='name-slug'>
+                        <div id='name'>Tom Driscoll</div>
+                        <div id='slug-line'>a software engineer with an insatiable apetite for creation</div>
+                    </div>
                     <ul id='skills-list'>
                         <li>Skills</li>
                         <li>Ruby</li>
