desscription drawer animation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href='./index.css'>
+    <script type='text/javascript' src='./index.js'></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +14,7 @@
             <div id='column1'>
                 <div id='column1-content'>
                     <div id='name-slug'>
-                        <div id='name'>Tom Driscoll</div>
+                        <div id='name'>Tom&nbspDriscoll</div>
                         <div id='slug-line'>a software engineer with an insatiable apetite for creation</div>
                     </div>
                     <ul id='skills-list'>
@@ -37,6 +38,9 @@
                 </div>
                 <div id='project2' class='project-slide'></div>
                 <div id='project3' class='project-slide'></div>
+            </div>
+            <div id='column3'>
+                <div id='test-descript-slide' class='project-slide'><h1 id='descrip-x'>x</h1></div>
             </div>
         </div>
     </div>
