fixed animation transform that unfixed fixed elements

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id='site-top'>
-        <div id='column-hold'>
+        <div id='column-hold' class='column-pos-1'>
             <div id='column1'>
                 <div id='column1-content'>
                     <div id='name-slug'>
