smooth scroll / scroll disable

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href='./index.css'>
     <script type='text/javascript' src='./index.js'></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel=icon href=./fav.jpg>
 </head>
 <body>
     <div id='site-top'>
@@ -40,7 +41,9 @@
                 <div id='project3' class='project-slide'></div>
             </div>
             <div id='column3'>
-                <div id='test-descript-slide' class='project-slide'><h1 id='descrip-x'>x</h1></div>
+                <div  class='description-slide'><h1 class='descrip-x'>x</h1></div>
+                <div  class='description-slide'><h1 class='descrip-x'>x</h1></div>
+                <div  class='description-slide'><h1 class='descrip-x'>x</h1></div>
             </div>
         </div>
     </div>
