corrected animation delay

--- a/index.html
+++ b/index.html
@@ -41,7 +41,20 @@
                 <div id='project3' class='project-slide'></div>
             </div>
             <div id='column3'>
-                <div  class='description-slide'><h1 class='descrip-x'>x</h1></div>
+                <div  class='description-slide'>
+                    <h1 class='descrip-x'>X</h1>
+                    <div class='description-content'>
+
+                        <div class='description-text'>
+                            This is a clone I made of the SNES game 'Dr Mario' made by nintendo in 1990.
+                            
+                        </div>
+                        <div class='description-links'>
+                            <a href='https://tompdriscoll.github.io/Dr-Mario/'>Live Link</a>
+                            <a href='https://github.com/tompdriscoll/Dr-Mario'>Github Repo</a>
+                        </div>
+                    </div>
+                </div>
                 <div  class='description-slide'><h1 class='descrip-x'>x</h1></div>
                 <div  class='description-slide'><h1 class='descrip-x'>x</h1></div>
             </div>
