load animations skills

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                     <ul id='skills-list'>
                         <li>Skills</li>
                         <li>Ruby</li>
+                        <li>Rails</li>
                         <li>Javascript</li>
-                        <li>Ruby</li>
-                        <li>Javascript</li>
-                        <li>Ruby</li>
-                        <li>Javascript</li>
+                        <li>React</li>
+                        <li>Redux</li>
+                        <li>SQL</li>
                     </ul>
                 </div>
             </div>
@@ -55,8 +55,8 @@
                         </div>
                     </div>
                 </div>
-                <div  class='description-slide'><h1 class='descrip-x'>x</h1></div>
-                <div  class='description-slide'><h1 class='descrip-x'>x</h1></div>
+                <div  class='description-slide'><h1 class='descrip-x'>X</h1></div>
+                <div  class='description-slide'><h1 class='descrip-x'>X</h1></div>
             </div>
         </div>
     </div>
