load animations name

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
             <div id='column1'>
                 <div id='column1-content'>
                     <div id='name-slug'>
-                        <div id='name'>Tom&nbspDriscoll</div>
-                        <div id='slug-line'>a software engineer with an insatiable apetite for creation</div>
+                        <div id='name'>
+                            <span>T</span>
+                            <div id='animated-name'>om&nbspDriscoll</div>
+                    </div>
+                        <div id='slug-line'>a sofware engineer with an insatiable apetite for creation</div>
                     </div>
                     <ul id='skills-list'>
                         <li>Skills</li>
