moble media queries

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id='site-top'>
-        <div id='column-hold' class='column-pos-1'>
+        <div id='column-hold'>
             <div id='column1'>
                 <div id='column1-content'>
                     <div id='name-slug'>
@@ -49,7 +49,8 @@
                     <div class='description-content'>
 
                         <div class='description-text'>
-                            This is a clone I made of the SNES game 'Dr Mario' made by nintendo in 1990.
+                            This is a clone I made of the SNES game 'Dr Mario' made by Nintendo in 1990. I was able to build this modest 
+                            clone with HTML, CSS, and Javascript as well as help from Webpack and the keymaster.js library.
                             
                         </div>
                         <div class='description-links'>
