--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div id='droppy-background'></div>
                 </div>
                 <div id='project3' class='project-slide'>
-                    <div id='save-a-stray'></div>
+                    <div id='sys-background'></div>
                 </div>
             </div>
             <div id='column3'>
@@ -65,13 +65,13 @@
                     <div class='description-content'>
 
                         <div class='description-text'>
-                            This is a clone I made of the SNES game 'Dr Mario' made by Nintendo in 1990. I was able to build this modest 
-                            clone with HTML, CSS, and Javascript as well as help from Webpack and the keymaster.js library.
+                            Droppyboy is my project attempting to emulate Dropbox. My first React app, 
+                            Droppyboy has the ability to store users files using AWS S3 buckets.
                             
                         </div>
                         <div class='description-links'>
-                            <a href='https://tompdriscoll.github.io/Dr-Mario/'>	Live Link</a>
-                            <a href='https://github.com/tompdriscoll/Dr-Mario'>Github Repo</a>
+                            <a href='https://droppyboy.herokuapp.com/'>	Live Link</a>
+                            <a href='https://github.com/tompdriscoll/Droppyboy'>Github Repo</a>
                         </div>
                     </div>
                 </div>
@@ -81,13 +81,14 @@
                     <div class='description-content'>
 
                         <div class='description-text'>
-                            This is a clone I made of the SNES game 'Dr Mario' made by Nintendo in 1990. I was able to build this modest 
-                            clone with HTML, CSS, and Javascript as well as help from Webpack and the keymaster.js library.
+                            Save-your-stray is an app that was designed to help underfunded animal shelters grow
+                            their reach in a convenient and cheap fashion. The app is built primarily with a MERN stack
+                            and utilizes GraphQL.
                             
                         </div>
                         <div class='description-links'>
-                            <a href='https://tompdriscoll.github.io/Dr-Mario/'>	Live Link</a>
-                            <a href='https://github.com/tompdriscoll/Dr-Mario'>Github Repo</a>
+                            <a href='https://save-your-stray.herokuapp.com/'>	Live Link</a>
+                            <a href='https://github.com/tompdriscoll/Save-your-stray'>Github Repo</a>
                         </div>
                     </div>
                 </div>
