--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div id='column3'>
                 <div  class='description-slide'>
-                    <h1 class='descrip-x'>X</h1>
+                    <h1 class='descrip-x hidden'>X</h1>
                     <div class='description-content'>
 
                         <div class='description-text'>
@@ -61,7 +61,7 @@
                 </div>
                 
                 <div  class='description-slide'>
-                    <h1 class='descrip-x'>X</h1>
+                    <h1 class='descrip-x hidden'>X</h1>
                     <div class='description-content'>
 
                         <div class='description-text'>
@@ -77,7 +77,7 @@
                 </div>
                 
                 <div  class='description-slide'>
-                    <h1 class='descrip-x'>X</h1>
+                    <h1 class='descrip-x hidden'>X</h1>
                     <div class='description-content'>
 
                         <div class='description-text'>
