--- a/index.html
+++ b/index.html
@@ -21,15 +21,23 @@
                     </div>
                         <div id='slug-line'>a software engineer with an insatiable apetite for creation</div>
                     </div>
-                    <ul id='skills-list'>
-                        <li>Skills</li>
-                        <li>Ruby</li>
-                        <li>Rails</li>
-                        <li>Javascript</li>
-                        <li>React</li>
-                        <li>Redux</li>
-                        <li>SQL</li>
-                    </ul>
+                    <div id='tom-lists'>
+                        <ul id='skills-list' class='tom-list'>
+                            <li>Skills</li>
+                            <li>Ruby</li>
+                            <li>Rails</li>
+                            <li>Javascript</li>
+                            <li>React</li>
+                            <li>Redux</li>
+                            <li>SQL</li>
+                        </ul>
+                        <ul id='contact-list' class='tom-list'>
+                            <li>Contact</li>
+                            <li><a href='mailto:tomdriscoll5@gmail.com'>tomdriscoll5@gmail.com</a></li>
+                            <li><a href='https://www.linkedin.com/in/tompdriscoll/'>LinkedIn</a></li>
+                            <li><a href='https://github.com/tompdriscoll'>Github</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div id='column2'>
