--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </ul>
                         <ul id='contact-list' class='tom-list'>
                             <li>Contact</li>
-                            <li><a href='mailto:tomdriscoll5@gmail.com'>tomdriscoll5@gmail.com</a></li>
+                            <li><a href='mailto:tomdriscoll5@gmail.com'>Email</a></li>
                             <li><a href='https://www.linkedin.com/in/tompdriscoll/'>LinkedIn</a></li>
                             <li><a href='https://github.com/tompdriscoll'>Github</a></li>
                         </ul>
